src/test/deca/context/invalid/provided/double-decalre.deca

{int x = 2;
int x = 4 ;

}

/*  Commentaire  */
